# DZHf

./: .gitignore  pyproject.toml
.github/workflows/: marimo_web.yml
data/: Hf.csv  Hf.txt  Ramirez_etal_2016b.csv
notebooks/: main.py
notebooks/layouts/: main.grid.json
